# torq

./: .gitignore  DESIGN.md  README.md  pyproject.toml  setup.py  usage.py
csrc/: exposition.c  exposition.h  torq.c
csrc/interception/: entrypoint.c  interception.c  interception.h  registry.c  registry.h  state.h  tracer.c  tracer.h  utils.h
csrc/interception/symbols/: kernel.c  kernel.h  memory.c  memory.h  stream.c  stream.h
torq/: __init__.py  _torq.pyi  builder.py  compiler.py  config.py  dag.py  pipes.py  registry.py  utils.py
torq/compiler/: __init__.py  compile.py  dag.py  frontend.py  nodes.py
torq/compiler/_fulqrum/: __init__.py  tracer.py
torq/core/: __init__.py  pipeline.py  pipes.py  registry.py  runnable.py
torq/cuda/: _C.pyi  __init__.py  detector.py  handlers.py  launcher.py  stream.py  tracer.py
