[project]
name = "torq"
version = "0.1.0"
description = "Deterministic pipeline composition and compilation"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = []

[project.optional-dependencies]
vision = ["opencv-python", "torch"]
visionrt-linux = ["visionrt @ git+https://github.com/abiel-almonte/visionrt.git"]
cupy-cu12 = ["cupy-cuda12x"]
cupy-cu13 = ["cupy-cuda13x"]

[dependency-groups]
dev = [
    "black",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"